--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.WhereToEat">
-        <activity android:name=".splash.SplashActivity">
+        <activity android:name=".main.activities.SplashActivity">
         <intent-filter>
             <action android:name="android.intent.action.MAIN" />
             <category android:name="android.intent.category.LAUNCHER" />
@@ -17,7 +17,7 @@
     </activity>
 
 
-    <activity android:name=".main.MainActivity">
+    <activity android:name=".main.activities.MainActivity">
     </activity>
 </application>
 
