--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,7 @@ android {
 }
 
 dependencies {
+    implementation 'androidx.cardview:cardview:1.0.0'
     def nav_version = "2.3.1"
     def lifecycle_version = "1.1.1"
     def room_version = "2.2.5"
