--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,11 @@ android {
 }
 
 dependencies {
+    def nav_version = "2.3.2"
+    def version_retrofit = "2.4.0"
+
+    //googlemaps
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
 
     //glide
     implementation 'com.github.bumptech.glide:glide:4.11.0'
@@ -48,9 +53,7 @@ dependencies {
     //picasso
     implementation 'com.squareup.picasso:picasso:2.5.2'
 
-    implementation 'androidx.cardview:cardview:1.0.0'
-    def nav_version = "2.3.2"
-    def version_retrofit = "2.4.0"
+
     //corotunies
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.1'
     api "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.1"
@@ -88,7 +91,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-
+    implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
